--- a/blog/content/posts/2024-10-08-tagging.md
+++ b/blog/content/posts/2024-10-08-tagging.md
@@ -1,7 +1,7 @@
 ---
 layout: :theme/post
 title: The first Roq plugin is for tagging (with pagination)
-image: https://images.unsplash.com/photo-1523309375637-b3f4f2347f2d?q=80&w=3732&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+image: tagging.png
 description: We introduced the first Roq plugin, it is for collection tagging & with pagination support!
 author: ia3andy
 tags: plugin, frontmatter, guide, cool-stuff
