--- a/docs/modules/ROOT/pages/_includes/quarkus-roq-frontmatter.adoc
+++ b/docs/modules/ROOT/pages/_includes/quarkus-roq-frontmatter.adoc
@@ -64,7 +64,7 @@ a|icon:lock[title=Fixed at build time] [[quarkus-roq-frontmatter_site-ignored-fi
 
 [.description]
 --
-The ignored files in the different Roq site directories (you can use glob expressions).
+The ignored files in the site directory (you can use glob expressions).
 
 
 ifdef::add-copy-button-to-env-var[]
@@ -81,7 +81,7 @@ a|icon:lock[title=Fixed at build time] [[quarkus-roq-frontmatter_site-page-layou
 
 [.description]
 --
-The layout to use for normal pages if not specified in FM. When empty, the page will not use a layout when it doesn't specify it in FM. ":theme/" is removed if no theme is defined.
+The layout to use for normal html pages if not specified in FM. When empty, the page will not use a layout when it doesn't specify it in FM. ":theme/" is removed if no theme is defined.
 
 
 ifdef::add-copy-button-to-env-var[]
@@ -166,7 +166,7 @@ a|icon:lock[title=Fixed at build time] [[quarkus-roq-frontmatter_site-images-pat
 
 [.description]
 --
-The public path containing pages and documents images (relative to the site path)
+The path containing static images
 
 
 ifdef::add-copy-button-to-env-var[]
