--- a/blog/content/posts/2024-11-14-qrcode.md
+++ b/blog/content/posts/2024-11-14-qrcode.md
@@ -4,7 +4,7 @@ title: Need a QR Code?
 image: https://images.unsplash.com/photo-1726255294277-57c46883bd94?q=80&w=3870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 description: Add a QR Code to your Roq website.
 author: ia3andy
-tags: qrcode, guide, cool-stuff
+tags: guide,cool-stuff,plugin
 date: 2024-11-14 14:00:00 +0200
 series: roq-plugins
 ---
